--- a/src/renderer/views/pages/library-songs.ejs
+++ b/src/renderer/views/pages/library-songs.ejs
@@ -56,45 +56,6 @@
                     </button>
                 </div>
             </div>
-            <div class="row" style="margin-bottom: 16px">
-                <button
-                    class="col md-btn page-btn"
-                    :disabled="currentPage === 1"
-                    @click="goToPage(1)"
-                >
-                    <img class="md-ico-first"/>
-                </button>
-                <button
-                    class="col md-btn page-btn prev"
-                    :disabled="currentPage === 1"
-                    @click="goToPrevious()"
-                >
-                    <img class="md-ico-prev"/>
-                </button>
-                <button
-                    :class="`col md-btn page-btn${ isCurrentPage(page) ? ' md-btn-primary': ''}`"
-                    @click="goToPage(page)"
-                    v-for="page in pagesToShow"
-                >{{ page }}</button>
-                <button
-                    class="col md-btn page-btn next"
-                    :disabled="currentPage === numPages"
-                    @click="goToNext()"
-                >
-                    <img class="md-ico-next"/>
-                </button>
-                <button
-                    class="col md-btn page-btn last"
-                    :disabled="currentPage === numPages"
-                    @click="goToEnd()"
-                >
-                    <img class="md-ico-last"/>
-                </button>
-                <div class="col page-btn" style="min-width: 12em;">
-                    <input type="number" min="1" :max="numPages" :value="currentPage" @change="changePage" />
-                    <span>/ {{ numPages }}</span>
-                </div>
-            </div>
         </div>
 
         <div v-if="library.songs.downloadState == 3">Library contains no songs.</div>
@@ -113,7 +74,6 @@
         template: '#cider-library-songs',
         data: function () {
             return {
-                // currentPage is oneIndexed
                 currentPage: 1,
                 library: this.$root.library,
                 mediaItemSize: "compact",
@@ -123,72 +83,40 @@
             }
         },
         mounted() {
+            document.querySelector("#app-content")
+                .addEventListener("scroll", this.handleScroll)
             this.$root.getLibrarySongsFull()
+        },
+        destroyed() {
+            document.querySelector("#app-content")
+                .removeEventListener("scroll", this.handleScroll)
+        },
+        watch: {
+            'library.songs.displayListing.length': function () {
+                // If a search reduces the number of things to show, we want to limit
+                // the number of songs shown as well. This is to prevent you scrolling
+                // to load your entire library, searching for one song, and then having
+                // th re-render the entire library
+                if (this.currentPage > this.numPages) {
+                    this.currentPage = this.numPages;
+                }
+            }
         },
         computed: {
             currentSlice: function () {
-                const startingPage = Math.min(this.numPages, this.currentPage);
-
                 return this.library.songs.displayListing.slice(
-                    (startingPage - 1) * this.pageSize,
-                    startingPage * this.pageSize
+                    0, this.currentPage * this.pageSize
                 );
             },
             numPages: function () {
                 return Math.ceil(this.library.songs.displayListing.length / this.pageSize) || 1;
-
-            },
-            pagesToShow: function () {
-                let start = this.currentPage - 2;
-                let end = this.currentPage + 2;
-
-                if (start < 1) {
-                    end += (1 - start);
-                    start = 1;
-                }
-
-                const endDifference = end - this.numPages;
-
-                if (endDifference > 0) {
-                    end = this.numPages;
-                    start = Math.max(1, start - endDifference);
-                }
-
-                const array = [];
-                for (let idx = start; idx <= end; idx++) {
-                    array.push(idx);
-                }
-
-                return array;
             }
         },
         methods: {
-            isCurrentPage: function (idx) {
-                return idx === this.currentPage ||
-                    idx === this.numPages && this.currentPage > this.numPages;
-            },
-            changePage: function (event) {
-                const value = event.target.valueAsNumber;
-
-                if (!isNaN(value) && value >= 1 && value <= this.numPages) {
-                    this.currentPage = value;
-                }
-            },
-            goToPage: function (page) {
-                this.currentPage = page;
-            },
-            goToPrevious: function () {
-                if (this.currentPage > 1) {
-                    this.currentPage -= 1;
-                }
-            },
-            goToNext: function () {
-                if (this.currentPage < this.numPages) {
+            handleScroll: function (event) {
+                if (this.currentPage < this.numPages && event.target.scrollTop >= event.target.scrollHeight - event.target.clientHeight) {
                     this.currentPage += 1;
                 }
-            },
-            goToEnd: function () {
-                this.currentPage = this.numPages;
             },
             play: function () {
                 function shuffleArray(array) {
